# pycdp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test_package.yml
pycdp/: __init__.py  _builder.py  _config.py  _headers.py  _mixins.py  _models.py  _patterns.py  _protocols.py  _types.py  _utils.py  generator.py  loader.py  schemas.py
scripts/: dependencies.py
tests/: conftest.py  test_protocol_loading.py  test_schema_validation.py  test_snake_case.py
