[tool.poetry]
name = "pycdp"
version = "0.1.0"
description = "Pythonic marshalling of the devtools protocol"
authors = ["symonk <jackofspaces@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
marshmallow = "^3.16.0"

[tool.poetry.dev-dependencies]
pytest = "tox"
tox = "^3.25.0"
pre-commit = "^2.19.0"
asserto = {version = "0.0.7"}
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
